# lonely-runners

./: .gitignore  CMakeLists.txt  README.md  extra_11  happy.cpp  happy_check.py  main.cpp  result_11  result_12  run.sh  scratch.tex  test_main.cpp
article/: article.tex  ref.bib
happy_speeds/: one_to_k_happy.cpp  one_to_k_happy_result.txt  run_batch.sh
results/: result_11
src/: find_cover.h  happy.h  lift.h  speedset.h
